# kfe

./: .gitattributes  AUTHORS  ChangeLog  HACKING  KNOWNBUGS  Makefile.am  Makefile.in  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  automoc  config.h.in  configure  configure.in  kfe.kdevprj  kfe.lsm
kfe/: HACKING  Makefile.am  Makefile.in  address.cpp  address.h  arealistwidget.cpp  arealistwidget.h  arealistwidget.moc.cpp  areas.c  attribbar.cpp  attribbar.h  composeview.cpp  composeview.h  composewidget.cpp  composewidget.h  f_area.cpp  f_area.h  f_message.cpp  f_message.h  gdb-transcript  kfe.kdelnk  kfe.xpm  kfetoplevel.cpp  kfetoplevel.h  kfetoplevel.moc.cpp  ksmapi.cpp  ksmapi.cpp~  ksmapi.h  main.cpp  msgattributes.cpp  msgattributes.h  msgbody.cpp  msgbody.h  msgline.cpp  msgline.h  msglistwidget.cpp  msglistwidget.h  msglistwidget.moc.cpp  msgwidget.cpp  msgwidget.h  (+7 more)
kfe/.deps/: arealistwidget.P  arealistwidget.moc.P  f_area.P  f_message.P  kfetoplevel.P  kfetoplevel.moc.P  main.P  msglistwidget.P  msglistwidget.moc.P  msgwidget.P  msgwidget.moc.P
kfe/docs/: Makefile.in
kfe/docs/en/: Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
pics/: Makefile.am  Makefile.in
pics/mini/: Makefile.in
po/: Makefile  Makefile.am  Makefile.in
