####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = index-1.html index-2.html index-3.html index-4.html index-5.html index-6.html index.html 

install-data-local:
	$(mkinstalldirs) $(kde_htmldir)/en/kfe/
	$(INSTALL_DATA) index-1.html $(kde_htmldir)/en/kfe/index-1.html
	$(mkinstalldirs) $(kde_htmldir)/en/kfe/
	$(INSTALL_DATA) index-2.html $(kde_htmldir)/en/kfe/index-2.html
	$(mkinstalldirs) $(kde_htmldir)/en/kfe/
	$(INSTALL_DATA) index-3.html $(kde_htmldir)/en/kfe/index-3.html
	$(mkinstalldirs) $(kde_htmldir)/en/kfe/
	$(INSTALL_DATA) index-4.html $(kde_htmldir)/en/kfe/index-4.html
	$(mkinstalldirs) $(kde_htmldir)/en/kfe/
	$(INSTALL_DATA) index-5.html $(kde_htmldir)/en/kfe/index-5.html
	$(mkinstalldirs) $(kde_htmldir)/en/kfe/
	$(INSTALL_DATA) index-6.html $(kde_htmldir)/en/kfe/index-6.html
	$(mkinstalldirs) $(kde_htmldir)/en/kfe/
	$(INSTALL_DATA) index.html $(kde_htmldir)/en/kfe/index.html

uninstall-local:
	-rm -f $(kde_htmldir)/en/kfe/index-1.html
	-rm -f $(kde_htmldir)/en/kfe/index-2.html
	-rm -f $(kde_htmldir)/en/kfe/index-3.html
	-rm -f $(kde_htmldir)/en/kfe/index-4.html
	-rm -f $(kde_htmldir)/en/kfe/index-5.html
	-rm -f $(kde_htmldir)/en/kfe/index-6.html
	-rm -f $(kde_htmldir)/en/kfe/index.html

####### kdevelop will overwrite this part!!! (end)############
